ebikes-lwc-master/force-app/main/default/objects/Loan__c/fields/Maximum_Loan_Duration__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Loan_Duration__c</fullName>
    <label>Maximum Loan Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>