ebikes-lwc-master/force-app/main/default/objects/Loan__c/fields/Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Name__c</fullName>
    <label>Scheme Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>